# main_service/core/main.go
@@ -8,6 +8,7 @@ import (
 	"main_service_core/middlewares"
 	post_pb "main_service_core/post"
 	"main_service_core/reaction"
+	stats_pb "main_service_core/stats"
 	"main_service_core/utils"
 
 	"github.com/gin-gonic/gin"
@@ -30,6 +31,11 @@ func main() {
 		log.Fatal(err)
 	}
 
+	err = stats_pb.Connect()
+	if err != nil {
+		log.Fatal(err)
+	}
+
 	r := gin.Default()
 	r.POST("/api/v1/user/sign-up", controllers.SignUp)
 	r.POST("/api/v1/user/sign-in", controllers.SignIn)
@@ -44,6 +50,9 @@ func main() {
 	authed.GET("/api/v1/pagination/:author_id/:offset/:limit", controllers.GetPostPagination)
 	authed.POST("/api/v1/post/view/:id", controllers.PostView)
 	authed.POST("/api/v1/post/like/:id", controllers.PostLike)
+	authed.GET("/api/v1/post/stats/:id", controllers.PostStats)
+	authed.GET("/api/v1/posts-top/:type/:count", controllers.PostsTop)
+	authed.GET("/api/v1/users-top/:count", controllers.UsersTop)
 
 	listening_line := fmt.Sprintf(":%s", utils.GetenvSafe("MAIN_SERVICE_PORT"))
 	log.Printf("listening at %s\n", listening_line)
